test/negative/after02.cfr
// Test for negative after constraint

a
 b ?
  c ?
  d ?
  [c after ]

// Rao: works fine as failed to parse. 
